[tool.poetry]
name = "processing_py"
version = "0.3.8"
description = "A powerful and easy-to-use Graphics Library for Python based on Processing."
authors = ["Faruk Hammound <farukhammoud@student-cs.fr>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
